Fix: Arreglo de errores basados en roles y permisos

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -50,3 +50,22 @@ error.interno=Internal server error
 rol.estudiante=Student
 rol.docente=Teacher
 rol.admin=Administrator
+
+# Navbar
+navbar.inicio=Home
+navbar.materias=Subjects
+navbar.comoFunciona=How It Works
+navbar.contacto=Contact
+navbar.miPerfil=My Profile
+navbar.dashboard=Dashboard
+navbar.subirRecurso=Upload Resource
+navbar.cerrarSesion=Logout
+navbar.iniciarSesion=Login
+navbar.registrarse=Register
+navbar.idioma=Language
+
+# Dropdown
+dropdown.perfil=My Profile
+dropdown.dashboard=Dashboard
+dropdown.subir=Upload Resource
+dropdown.salir=Logout
