--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -4,6 +4,7 @@ app.descripcion=Plataforma educativa gratuita
 app.bienvenida=Bienvenido a EduAventuras
 
 # Usuarios
+
 usuario.registro.exito=Usuario registrado exitosamente
 usuario.login.exito=Inicio de sesión exitoso
 usuario.no.encontrado=Usuario no encontrado
@@ -12,6 +13,7 @@ usuario.credenciales.invalidas=Credenciales inválidas
 usuario.inactivo=Usuario inactivo
 
 # Materias
+
 materia.creada=Materia creada exitosamente
 materia.actualizada=Materia actualizada exitosamente
 materia.eliminada=Materia eliminada exitosamente
@@ -19,6 +21,7 @@ materia.no.encontrada=Materia no encontrada
 materia.con.recursos=No se puede eliminar una materia con recursos asociados
 
 # Recursos
+
 recurso.subido=Recurso subido exitosamente
 recurso.eliminado=Recurso eliminado exitosamente
 recurso.restaurado=Recurso restaurado exitosamente
@@ -30,23 +33,46 @@ recurso.tamanio.excedido=El archivo no puede superar 10MB
 descarga.registrada=Descarga registrada exitosamente
 
 # Estadísticas
+
 estadisticas.titulo=Estadísticas del Sistema
 estadisticas.usuarios=Usuarios
 estadisticas.recursos=Recursos
 estadisticas.descargas=Descargas
 
 # Reportes
+
 reporte.generado=Reporte generado exitosamente
 reporte.error=Error al generar el reporte
 
 # Errores
+
 error.general=Ha ocurrido un error
 error.acceso.denegado=Acceso denegado
 error.no.encontrado=Recurso no encontrado
 error.interno=Error interno del servidor
 
 # Roles
+
 rol.estudiante=Estudiante
 rol.docente=Docente
 rol.admin=Administrador
+
+# Navbar
+navbar.inicio=Inicio
+navbar.materias=Materias
+navbar.comoFunciona=Cómo Funciona
+navbar.contacto=Contacto
+navbar.miPerfil=Mi Perfil
+navbar.dashboard=Dashboard
+navbar.subirRecurso=Subir Recurso
+navbar.cerrarSesion=Cerrar Sesión
+navbar.iniciarSesion=Iniciar Sesión
+navbar.registrarse=Registrarse
+navbar.idioma=Idioma
+
+# Dropdown
+dropdown.perfil=Mi Perfil
+dropdown.dashboard=Dashboard
+dropdown.subir=Subir Recurso
+dropdown.salir=Cerrar Sesión
 
