--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -49,3 +49,22 @@ error.interno=Erreur interne du serveur
 rol.estudiante=Étudiant
 rol.docente=Enseignant
 rol.admin=Administrateur
+
+# Navbar
+navbar.inicio=Accueil
+navbar.materias=Matières
+navbar.comoFunciona=Comment ça marche
+navbar.contacto=Contact
+navbar.miPerfil=Mon Profil
+navbar.dashboard=Tableau de bord
+navbar.subirRecurso=Télécharger une ressource
+navbar.cerrarSesion=Déconnexion
+navbar.iniciarSesion=Connexion
+navbar.registrarse=S'inscrire
+navbar.idioma=Langue
+
+# Dropdown
+dropdown.perfil=Mon Profil
+dropdown.dashboard=Tableau de bord
+dropdown.subir=Télécharger une ressource
+dropdown.salir=Déconnexion
