Add : Se añade la funcionalidad de i18n en todas las vistas html

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,8 +1,187 @@
-
 # Application
 app.nombre=EduAventuras
 app.descripcion=Free educational platform
 app.bienvenida=Welcome to EduAventuras
+
+# Navbar
+navbar.inicio=Home
+navbar.materias=Subjects
+navbar.comoFunciona=How It Works
+navbar.contacto=Contact
+navbar.miPerfil=My Profile
+navbar.dashboard=Dashboard
+navbar.subirRecurso=Upload Resource
+navbar.cerrarSesion=Logout
+navbar.iniciarSesion=Login
+navbar.registrarse=Sign Up
+navbar.idioma=Language
+
+# Dropdown
+dropdown.perfil=My Profile
+dropdown.dashboard=Dashboard
+dropdown.subir=Upload Resource
+dropdown.salir=Logout
+
+# Hero Section
+hero.titulo=Free Education for Everyone
+hero.descripcion=Access quality educational resources at no cost. Learn math, science, Spanish and much more.
+hero.btnExplorar=Explore Subjects
+
+# Features
+features.titulo=Why EduAventuras?
+features.gratuito=100% Free
+features.gratuito.desc=All our resources are completely free. Accessible education for everyone.
+features.materias=Multiple Subjects
+features.materias.desc=Find resources for math, science, Spanish, history and more.
+features.acceso=Universal Access
+features.acceso.desc=Learn from anywhere, anytime. You only need internet.
+
+# How It Works
+comofunciona.titulo=How Does It Work?
+comofunciona.paso1=Sign Up for Free
+comofunciona.paso1.desc=Create your account in seconds. You only need an email address.
+comofunciona.paso2=Explore Subjects
+comofunciona.paso2.desc=Browse our subjects and find the resources you need.
+comofunciona.paso3=Download and Learn
+comofunciona.paso3.desc=Download PDF resources and start your educational adventure.
+
+# CTA
+cta.titulo=Start Your Educational Adventure Today!
+cta.descripcion=Join thousands of students already learning with EduAventuras
+cta.btn=Create Free Account
+
+# Login
+login.titulo=Login
+login.descripcion=Enter your credentials to access your account
+login.email=Email Address
+login.password=Password
+login.recordar=Remember me
+login.olvidaste=Forgot your password?
+login.btn=Login
+login.noCuenta=Don't have an account?
+login.registrate=Sign up here
+login.volver=Back to home
+login.bienvenida=Welcome Back!
+login.continua=Continue your educational adventure
+
+# Registration
+registro.titulo=Create Account
+registro.descripcion=Complete the form to register
+registro.nombre=First Name
+registro.apellido=Last Name
+registro.email=Email Address
+registro.password=Password
+registro.confirmar=Confirm Password
+registro.rol=User Type
+registro.rolPlaceholder=Select your role
+registro.estudiante=Student
+registro.docente=Teacher
+registro.terminos=I accept the terms and conditions
+registro.btn=Create Account
+registro.yaCuenta=Already have an account?
+registro.iniciaAqui=Login here
+registro.bienvenida=Join EduAventuras!
+registro.comienza=Start your educational journey today
+
+# Password Recovery
+recuperar.titulo=Recover Password
+recuperar.subtitulo=Enter your email and we'll send you a link to reset your password
+recuperar.email=Email
+recuperar.emailPlaceholder=your@email.com
+recuperar.btnEnviar=Send Link
+recuperar.volverLogin=Back to login
+recuperar.emailEnviado=Link Sent
+recuperar.mensajeEnviado=If the email exists in our system, you will receive a recovery link.
+recuperar.paraTesting=For testing:
+recuperar.irLogin=Go to login
+recuperar.nuevaPassword=New Password
+recuperar.ingresaNueva=Enter your new password
+recuperar.passwordNueva=New Password
+recuperar.passwordPlaceholder=Minimum 6 characters
+recuperar.confirmarPassword=Confirm Password
+recuperar.confirmarPlaceholder=Repeat your password
+recuperar.btnRestablecer=Reset Password
+
+# Profile
+perfil.titulo=My Profile
+perfil.gestionarInfo=Manage your personal information
+perfil.cambiarFoto=Change Photo
+perfil.eliminarFoto=Delete Photo
+perfil.informacion=Information
+perfil.email=Email
+perfil.rol=Role
+perfil.miembro=Member since
+perfil.materiaFav=Favorite Subject
+perfil.actividad=Recent Activity
+perfil.editarInfo=Edit Information
+perfil.nombre=First Name
+perfil.apellido=Last Name
+perfil.biografia=Biography
+perfil.seguridad=Security
+perfil.cambiarPassword=Change Password
+perfil.guardar=Save Changes
+perfil.cancelar=Cancel
+
+# Admin Dashboard
+admin.bienvenida=Welcome
+admin.panel=Control panel and EduAventuras statistics
+admin.usuarios=Registered Users
+admin.materias=Available Subjects
+admin.recursos=Uploaded Resources
+admin.descargas=Total Downloads
+admin.acciones=Quick Actions
+admin.gestionarMaterias=Manage Subjects
+admin.gestionarUsuarios=Manage Users
+admin.subirRecurso=Upload Resource
+admin.reportes=View Reports
+admin.usuariosPorRol=Users by Role
+admin.recursosPorMateria=Resources by Subject
+admin.actividadReciente=Recent Activity
+
+# Subject Management
+materias.gestion=Subject Management
+materias.administrar=Manage the subjects available on the platform
+materias.nueva=New Subject
+materias.buscar=Search subjects by name or description...
+materias.total=subjects in total
+materias.sinMaterias=No subjects registered
+materias.comenzar=Start by adding your first subject
+materias.crearPrimera=Create First Subject
+materias.imagen=Image
+materias.nombre=Name
+materias.descripcion=Description
+materias.recursos=Resources
+materias.acciones=Actions
+materias.crear=Create Subject
+materias.editar=Edit Subject
+materias.confirmarEliminar=Are you sure you want to delete this subject?
+materias.noDeshacer=This action cannot be undone.
+
+# Upload Resource
+subir.titulo=Upload New Resource
+subir.descripcion=Share educational material with your students
+subir.tituloRecurso=Resource Title
+subir.descripcionRecurso=Description
+subir.materia=Subject
+subir.archivo=PDF File
+subir.arrastra=Drag your PDF file here
+subir.seleccionar=Select File
+subir.tamaño=Maximum size: 10 MB
+subir.cancelar=Cancel
+subir.btnSubir=Upload Resource
+
+# Resources
+recursos.titulo=Subject Resources
+recursos.explora=Explore and download available materials
+recursos.buscar=Search resources by title or description...
+recursos.sin=No resources available
+recursos.sinMensaje=This subject doesn't have uploaded materials yet
+recursos.sinResultados=No results found
+recursos.intentaOtros=Try other search terms
+recursos.descargar=Download
+recursos.eliminar=Delete
+recursos.confirmar=Delete resource?
+recursos.noDeshacer=This action cannot be undone. The file will be permanently deleted.
 
 # Users
 usuario.registro.exito=User registered successfully
@@ -45,27 +224,36 @@ error.general=An error has occurred
 error.acceso.denegado=Access denied
 error.no.encontrado=Resource not found
 error.interno=Internal server error
+error.conexion=Connection error. Please try again.
+error.cargarMaterias=Could not load subjects
 
 # Roles
 rol.estudiante=Student
 rol.docente=Teacher
 rol.admin=Administrator
 
-# Navbar
-navbar.inicio=Home
-navbar.materias=Subjects
-navbar.comoFunciona=How It Works
-navbar.contacto=Contact
-navbar.miPerfil=My Profile
-navbar.dashboard=Dashboard
-navbar.subirRecurso=Upload Resource
-navbar.cerrarSesion=Logout
-navbar.iniciarSesion=Login
-navbar.registrarse=Register
-navbar.idioma=Language
+# States
+estado.cargando=Loading...
+estado.guardando=Saving...
+estado.eliminando=Deleting...
+estado.subiendo=Uploading...
 
-# Dropdown
-dropdown.perfil=My Profile
-dropdown.dashboard=Dashboard
-dropdown.subir=Upload Resource
-dropdown.salir=Logout
+# Common Buttons
+btn.guardar=Save
+btn.cancelar=Cancel
+btn.eliminar=Delete
+btn.editar=Edit
+btn.confirmar=Confirm
+btn.cerrar=Close
+btn.buscar=Search
+btn.reintentar=Retry
+
+# Footer
+footer.descripcion=Free educational platform dedicated to providing quality resources
+footer.enlaces=Links
+footer.materiasPopulares=Popular Subjects
+footer.contacto=Contact
+footer.soporte=Support
+footer.terminos=Terms
+footer.privacidad=Privacy
+footer.derechos=All rights reserved
