--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -3,60 +3,6 @@ app.nombre=EduAventuras
 app.descripcion=Plataforma educativa gratuita
 app.bienvenida=Bienvenido a EduAventuras
 
-# Usuarios
-
-usuario.registro.exito=Usuario registrado exitosamente
-usuario.login.exito=Inicio de sesión exitoso
-usuario.no.encontrado=Usuario no encontrado
-usuario.email.existe=El email ya está registrado
-usuario.credenciales.invalidas=Credenciales inválidas
-usuario.inactivo=Usuario inactivo
-
-# Materias
-
-materia.creada=Materia creada exitosamente
-materia.actualizada=Materia actualizada exitosamente
-materia.eliminada=Materia eliminada exitosamente
-materia.no.encontrada=Materia no encontrada
-materia.con.recursos=No se puede eliminar una materia con recursos asociados
-
-# Recursos
-
-recurso.subido=Recurso subido exitosamente
-recurso.eliminado=Recurso eliminado exitosamente
-recurso.restaurado=Recurso restaurado exitosamente
-recurso.no.encontrado=Recurso no encontrado
-recurso.archivo.invalido=El archivo debe ser un PDF
-recurso.tamanio.excedido=El archivo no puede superar 10MB
-
-# Descargas
-descarga.registrada=Descarga registrada exitosamente
-
-# Estadísticas
-
-estadisticas.titulo=Estadísticas del Sistema
-estadisticas.usuarios=Usuarios
-estadisticas.recursos=Recursos
-estadisticas.descargas=Descargas
-
-# Reportes
-
-reporte.generado=Reporte generado exitosamente
-reporte.error=Error al generar el reporte
-
-# Errores
-
-error.general=Ha ocurrido un error
-error.acceso.denegado=Acceso denegado
-error.no.encontrado=Recurso no encontrado
-error.interno=Error interno del servidor
-
-# Roles
-
-rol.estudiante=Estudiante
-rol.docente=Docente
-rol.admin=Administrador
-
 # Navbar
 navbar.inicio=Inicio
 navbar.materias=Materias
@@ -76,3 +22,238 @@ dropdown.dashboard=Dashboard
 dropdown.subir=Subir Recurso
 dropdown.salir=Cerrar Sesión
 
+# Hero Section
+hero.titulo=Educación Gratuita para Todos
+hero.descripcion=Accede a recursos educativos de calidad sin costo alguno. Aprende matemáticas, ciencias, español y mucho más.
+hero.btnExplorar=Explorar Materias
+
+# Features
+features.titulo=¿Por Qué EduAventuras?
+features.gratuito=100% Gratuito
+features.gratuito.desc=Todos nuestros recursos son completamente gratuitos. Educación accesible para todos.
+features.materias=Múltiples Materias
+features.materias.desc=Encuentra recursos de matemáticas, ciencias, español, historia y más.
+features.acceso=Acceso Universal
+features.acceso.desc=Aprende desde cualquier lugar, en cualquier momento. Solo necesitas internet.
+
+# Como Funciona
+comofunciona.titulo=¿Cómo Funciona?
+comofunciona.paso1=Regístrate Gratis
+comofunciona.paso1.desc=Crea tu cuenta en segundos. Solo necesitas un correo electrónico.
+comofunciona.paso2=Explora Materias
+comofunciona.paso2.desc=Navega por nuestras materias y encuentra los recursos que necesitas.
+comofunciona.paso3=Descarga y Aprende
+comofunciona.paso3.desc=Descarga los recursos en PDF y comienza tu aventura educativa.
+
+# CTA
+cta.titulo=¡Comienza Tu Aventura Educativa Hoy!
+cta.descripcion=Únete a miles de estudiantes que ya están aprendiendo con EduAventuras
+cta.btn=Crear Cuenta Gratis
+
+# Login
+login.titulo=Iniciar Sesión
+login.descripcion=Ingresa tus credenciales para acceder a tu cuenta
+login.email=Correo Electrónico
+login.password=Contraseña
+login.recordar=Recordarme
+login.olvidaste=¿Olvidaste tu contraseña?
+login.btn=Iniciar Sesión
+login.noCuenta=¿No tienes una cuenta?
+login.registrate=Regístrate aquí
+login.volver=Volver al inicio
+login.bienvenida=¡Bienvenido de nuevo!
+login.continua=Continúa tu aventura educativa
+
+# Registro
+registro.titulo=Crear Cuenta
+registro.descripcion=Completa el formulario para registrarte
+registro.nombre=Nombre
+registro.apellido=Apellido
+registro.email=Correo Electrónico
+registro.password=Contraseña
+registro.confirmar=Confirmar Contraseña
+registro.rol=Tipo de Usuario
+registro.rolPlaceholder=Selecciona tu rol
+registro.estudiante=Estudiante
+registro.docente=Docente
+registro.terminos=Acepto los términos y condiciones
+registro.btn=Crear Cuenta
+registro.yaCuenta=¿Ya tienes una cuenta?
+registro.iniciaAqui=Inicia sesión aquí
+registro.bienvenida=¡Únete a EduAventuras!
+registro.comienza=Comienza tu viaje educativo hoy
+
+# Recuperar Password
+recuperar.titulo=Recuperar Contraseña
+recuperar.subtitulo=Ingresa tu email y te enviaremos un enlace para restablecer tu contraseña
+recuperar.email=Email
+recuperar.emailPlaceholder=tu@email.com
+recuperar.btnEnviar=Enviar Enlace
+recuperar.volverLogin=Volver al inicio de sesión
+recuperar.emailEnviado=Enlace Enviado
+recuperar.mensajeEnviado=Si el email existe en nuestro sistema, recibirás un enlace de recuperación.
+recuperar.paraTesting=Para testing:
+recuperar.irLogin=Ir a iniciar sesión
+recuperar.nuevaPassword=Nueva Contraseña
+recuperar.ingresaNueva=Ingresa tu nueva contraseña
+recuperar.passwordNueva=Nueva Contraseña
+recuperar.passwordPlaceholder=Mínimo 6 caracteres
+recuperar.confirmarPassword=Confirmar Contraseña
+recuperar.confirmarPlaceholder=Repite tu contraseña
+recuperar.btnRestablecer=Restablecer Contraseña
+
+# Perfil
+perfil.titulo=Mi Perfil
+perfil.gestionarInfo=Gestiona tu información personal
+perfil.cambiarFoto=Cambiar Foto
+perfil.eliminarFoto=Eliminar Foto
+perfil.informacion=Información
+perfil.email=Email
+perfil.rol=Rol
+perfil.miembro=Miembro desde
+perfil.materiaFav=Materia Favorita
+perfil.actividad=Actividad Reciente
+perfil.editarInfo=Editar Información
+perfil.nombre=Nombre
+perfil.apellido=Apellido
+perfil.biografia=Biografía
+perfil.seguridad=Seguridad
+perfil.cambiarPassword=Cambiar Contraseña
+perfil.guardar=Guardar Cambios
+perfil.cancelar=Cancelar
+
+# Admin Dashboard
+admin.bienvenida=Bienvenido
+admin.panel=Panel de control y estadísticas de EduAventuras
+admin.usuarios=Usuarios Registrados
+admin.materias=Materias Disponibles
+admin.recursos=Recursos Subidos
+admin.descargas=Descargas Totales
+admin.acciones=Acciones Rápidas
+admin.gestionarMaterias=Gestionar Materias
+admin.gestionarUsuarios=Gestionar Usuarios
+admin.subirRecurso=Subir Recurso
+admin.reportes=Ver Reportes
+admin.usuariosPorRol=Usuarios por Rol
+admin.recursosPorMateria=Recursos por Materia
+admin.actividadReciente=Actividad Reciente
+
+# Gestión Materias
+materias.gestion=Gestión de Materias
+materias.administrar=Administra las materias disponibles en la plataforma
+materias.nueva=Nueva Materia
+materias.buscar=Buscar materias por nombre o descripción...
+materias.total=materias en total
+materias.sinMaterias=No hay materias registradas
+materias.comenzar=Comienza agregando tu primera materia
+materias.crearPrimera=Crear Primera Materia
+materias.imagen=Imagen
+materias.nombre=Nombre
+materias.descripcion=Descripción
+materias.recursos=Recursos
+materias.acciones=Acciones
+materias.crear=Crear Materia
+materias.editar=Editar Materia
+materias.confirmarEliminar=¿Estás seguro de eliminar esta materia?
+materias.noDeshacer=Esta acción no se puede deshacer.
+
+# Subir Recurso
+subir.titulo=Subir Nuevo Recurso
+subir.descripcion=Comparte material educativo con tus estudiantes
+subir.tituloRecurso=Título del Recurso
+subir.descripcionRecurso=Descripción
+subir.materia=Materia
+subir.archivo=Archivo PDF
+subir.arrastra=Arrastra tu archivo PDF aquí
+subir.seleccionar=Seleccionar Archivo
+subir.tamaño=Tamaño máximo: 10 MB
+subir.cancelar=Cancelar
+subir.btnSubir=Subir Recurso
+
+# Recursos
+recursos.titulo=Recursos de la Materia
+recursos.explora=Explora y descarga los materiales disponibles
+recursos.buscar=Buscar recursos por título o descripción...
+recursos.sin=No hay recursos disponibles
+recursos.sinMensaje=Esta materia aún no tiene materiales subidos
+recursos.sinResultados=No se encontraron resultados
+recursos.intentaOtros=Intenta con otros términos de búsqueda
+recursos.descargar=Descargar
+recursos.eliminar=Eliminar
+recursos.confirmar=¿Eliminar recurso?
+recursos.noDeshacer=Esta acción no se puede deshacer. El archivo será eliminado permanentemente.
+
+# Usuarios
+usuario.registro.exito=Usuario registrado exitosamente
+usuario.login.exito=Inicio de sesión exitoso
+usuario.no.encontrado=Usuario no encontrado
+usuario.email.existe=El email ya está registrado
+usuario.credenciales.invalidas=Credenciales inválidas
+usuario.inactivo=Usuario inactivo
+
+# Materias
+materia.creada=Materia creada exitosamente
+materia.actualizada=Materia actualizada exitosamente
+materia.eliminada=Materia eliminada exitosamente
+materia.no.encontrada=Materia no encontrada
+materia.con.recursos=No se puede eliminar una materia con recursos asociados
+
+# Recursos
+recurso.subido=Recurso subido exitosamente
+recurso.eliminado=Recurso eliminado exitosamente
+recurso.restaurado=Recurso restaurado exitosamente
+recurso.no.encontrado=Recurso no encontrado
+recurso.archivo.invalido=El archivo debe ser un PDF
+recurso.tamanio.excedido=El archivo no puede superar 10MB
+
+# Descargas
+descarga.registrada=Descarga registrada exitosamente
+
+# Estadísticas
+estadisticas.titulo=Estadísticas del Sistema
+estadisticas.usuarios=Usuarios
+estadisticas.recursos=Recursos
+estadisticas.descargas=Descargas
+
+# Reportes
+reporte.generado=Reporte generado exitosamente
+reporte.error=Error al generar el reporte
+
+# Errores
+error.general=Ha ocurrido un error
+error.acceso.denegado=Acceso denegado
+error.no.encontrado=Recurso no encontrado
+error.interno=Error interno del servidor
+error.conexion=Error de conexión. Por favor, intenta nuevamente.
+error.cargarMaterias=No se pudieron cargar las materias
+
+# Roles
+rol.estudiante=Estudiante
+rol.docente=Docente
+rol.admin=Administrador
+
+# Estados
+estado.cargando=Cargando...
+estado.guardando=Guardando...
+estado.eliminando=Eliminando...
+estado.subiendo=Subiendo...
+
+# Botones comunes
+btn.guardar=Guardar
+btn.cancelar=Cancelar
+btn.eliminar=Eliminar
+btn.editar=Editar
+btn.confirmar=Confirmar
+btn.cerrar=Cerrar
+btn.buscar=Buscar
+btn.reintentar=Reintentar
+
+# Footer
+footer.descripcion=Plataforma educativa gratuita dedicada a brindar recursos de calidad
+footer.enlaces=Enlaces
+footer.materiasPopulares=Materias Populares
+footer.contacto=Contacto
+footer.soporte=Soporte
+footer.terminos=Términos
+footer.privacidad=Privacidad
+footer.derechos=Todos los derechos reservados
