--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -3,53 +3,6 @@ app.nombre=EduAventuras
 app.descripcion=Plateforme éducative gratuite
 app.bienvenida=Bienvenue à EduAventuras
 
-# Utilisateurs
-usuario.registro.exito=Utilisateur enregistré avec succès
-usuario.login.exito=Connexion réussie
-usuario.no.encontrado=Utilisateur non trouvé
-usuario.email.existe=Email déjà enregistré
-usuario.credenciales.invalidas=Identifiants invalides
-usuario.inactivo=Utilisateur inactif
-
-# Matières
-materia.creada=Matière créée avec succès
-materia.actualizada=Matière mise à jour avec succès
-materia.eliminada=Matière supprimée avec succès
-materia.no.encontrada=Matière non trouvée
-materia.con.recursos=Impossible de supprimer une matière avec des ressources associées
-
-# Ressources
-recurso.subido=Ressource téléchargée avec succès
-recurso.eliminado=Ressource supprimée avec succès
-recurso.restaurado=Ressource restaurée avec succès
-recurso.no.encontrado=Ressource non trouvée
-recurso.archivo.invalido=Le fichier doit être un PDF
-recurso.tamanio.excedido=Le fichier ne peut pas dépasser 10 Mo
-
-# Téléchargements
-descarga.registrada=Téléchargement enregistré avec succès
-
-# Statistiques
-estadisticas.titulo=Statistiques du Système
-estadisticas.usuarios=Utilisateurs
-estadisticas.recursos=Ressources
-estadisticas.descargas=Téléchargements
-
-# Rapports
-reporte.generado=Rapport généré avec succès
-reporte.error=Erreur lors de la génération du rapport
-
-# Erreurs
-error.general=Une erreur est survenue
-error.acceso.denegado=Accès refusé
-error.no.encontrado=Ressource non trouvée
-error.interno=Erreur interne du serveur
-
-# Rôles
-rol.estudiante=Étudiant
-rol.docente=Enseignant
-rol.admin=Administrateur
-
 # Navbar
 navbar.inicio=Accueil
 navbar.materias=Matières
@@ -68,3 +21,239 @@ dropdown.perfil=Mon Profil
 dropdown.dashboard=Tableau de bord
 dropdown.subir=Télécharger une ressource
 dropdown.salir=Déconnexion
+
+# Hero Section
+hero.titulo=Éducation Gratuite pour Tous
+hero.descripcion=Accédez à des ressources éducatives de qualité sans frais. Apprenez les mathématiques, les sciences, l'espagnol et bien plus encore.
+hero.btnExplorar=Explorer les Matières
+
+# Features
+features.titulo=Pourquoi EduAventuras?
+features.gratuito=100% Gratuit
+features.gratuito.desc=Toutes nos ressources sont entièrement gratuites. Éducation accessible à tous.
+features.materias=Matières Multiples
+features.materias.desc=Trouvez des ressources en mathématiques, sciences, espagnol, histoire et plus.
+features.acceso=Accès Universal
+features.acceso.desc=Apprenez de n'importe où, à tout moment. Vous n'avez besoin que d'internet.
+
+# How It Works
+comofunciona.titulo=Comment Ça Marche?
+comofunciona.paso1=Inscrivez-vous Gratuitement
+comofunciona.paso1.desc=Créez votre compte en quelques secondes. Vous n'avez besoin que d'une adresse e-mail.
+comofunciona.paso2=Explorez les Matières
+comofunciona.paso2.desc=Parcourez nos matières et trouvez les ressources dont vous avez besoin.
+comofunciona.paso3=Téléchargez et Apprenez
+comofunciona.paso3.desc=Téléchargez les ressources PDF et commencez votre aventure éducative.
+
+# CTA
+cta.titulo=Commencez Votre Aventure Éducative Aujourd'hui!
+cta.descripcion=Rejoignez des milliers d'étudiants qui apprennent déjà avec EduAventuras
+cta.btn=Créer un Compte Gratuit
+
+# Login
+login.titulo=Connexion
+login.descripcion=Entrez vos identifiants pour accéder à votre compte
+login.email=Adresse E-mail
+login.password=Mot de passe
+login.recordar=Se souvenir de moi
+login.olvidaste=Mot de passe oublié?
+login.btn=Se connecter
+login.noCuenta=Vous n'avez pas de compte?
+login.registrate=Inscrivez-vous ici
+login.volver=Retour à l'accueil
+login.bienvenida=Bon Retour!
+login.continua=Continuez votre aventure éducative
+
+# Registration
+registro.titulo=Créer un Compte
+registro.descripcion=Remplissez le formulaire pour vous inscrire
+registro.nombre=Prénom
+registro.apellido=Nom
+registro.email=Adresse E-mail
+registro.password=Mot de passe
+registro.confirmar=Confirmer le mot de passe
+registro.rol=Type d'utilisateur
+registro.rolPlaceholder=Sélectionnez votre rôle
+registro.estudiante=Étudiant
+registro.docente=Enseignant
+registro.terminos=J'accepte les termes et conditions
+registro.btn=Créer un compte
+registro.yaCuenta=Vous avez déjà un compte?
+registro.iniciaAqui=Connectez-vous ici
+registro.bienvenida=Rejoignez EduAventuras!
+registro.comienza=Commencez votre parcours éducatif aujourd'hui
+
+# Password Recovery
+recuperar.titulo=Récupérer le mot de passe
+recuperar.subtitulo=Entrez votre e-mail et nous vous enverrons un lien pour réinitialiser votre mot de passe
+recuperar.email=E-mail
+recuperar.emailPlaceholder=votre@email.com
+recuperar.btnEnviar=Envoyer le lien
+recuperar.volverLogin=Retour à la connexion
+recuperar.emailEnviado=Lien Envoyé
+recuperar.mensajeEnviado=Si l'e-mail existe dans notre système, vous recevrez un lien de récupération.
+recuperar.paraTesting=Pour les tests:
+recuperar.irLogin=Aller à la connexion
+recuperar.nuevaPassword=Nouveau mot de passe
+recuperar.ingresaNueva=Entrez votre nouveau mot de passe
+recuperar.passwordNueva=Nouveau mot de passe
+recuperar.passwordPlaceholder=Minimum 6 caractères
+recuperar.confirmarPassword=Confirmer le mot de passe
+recuperar.confirmarPlaceholder=Répétez votre mot de passe
+recuperar.btnRestablecer=Réinitialiser le mot de passe
+
+# Profile
+perfil.titulo=Mon Profil
+perfil.gestionarInfo=Gérez vos informations personnelles
+perfil.cambiarFoto=Changer la photo
+perfil.eliminarFoto=Supprimer la photo
+perfil.informacion=Informations
+perfil.email=E-mail
+perfil.rol=Rôle
+perfil.miembro=Membre depuis
+perfil.materiaFav=Matière favorite
+perfil.actividad=Activité récente
+perfil.editarInfo=Modifier les informations
+perfil.nombre=Prénom
+perfil.apellido=Nom
+perfil.biografia=Biographie
+perfil.seguridad=Sécurité
+perfil.cambiarPassword=Changer le mot de passe
+perfil.guardar=Enregistrer les modifications
+perfil.cancelar=Annuler
+
+# Admin Dashboard
+admin.bienvenida=Bienvenue
+admin.panel=Panneau de contrôle et statistiques EduAventuras
+admin.usuarios=Utilisateurs inscrits
+admin.materias=Matières disponibles
+admin.recursos=Ressources téléchargées
+admin.descargas=Téléchargements totaux
+admin.acciones=Actions rapides
+admin.gestionarMaterias=Gérer les matières
+admin.gestionarUsuarios=Gérer les utilisateurs
+admin.subirRecurso=Télécharger une ressource
+admin.reportes=Voir les rapports
+admin.usuariosPorRol=Utilisateurs par rôle
+admin.recursosPorMateria=Ressources par matière
+admin.actividadReciente=Activité récente
+
+# Subject Management
+materias.gestion=Gestion des matières
+materias.administrar=Gérez les matières disponibles sur la plateforme
+materias.nueva=Nouvelle matière
+materias.buscar=Rechercher des matières par nom ou description...
+materias.total=matières au total
+materias.sinMaterias=Aucune matière enregistrée
+materias.comenzar=Commencez par ajouter votre première matière
+materias.crearPrimera=Créer la première matière
+materias.imagen=Image
+materias.nombre=Nom
+materias.descripcion=Description
+materias.recursos=Ressources
+materias.acciones=Actions
+materias.crear=Créer une matière
+materias.editar=Modifier la matière
+materias.confirmarEliminar=Êtes-vous sûr de vouloir supprimer cette matière?
+materias.noDeshacer=Cette action ne peut pas être annulée.
+
+# Upload Resource
+subir.titulo=Télécharger une nouvelle ressource
+subir.descripcion=Partagez du matériel éducatif avec vos étudiants
+subir.tituloRecurso=Titre de la ressource
+subir.descripcionRecurso=Description
+subir.materia=Matière
+subir.archivo=Fichier PDF
+subir.arrastra=Faites glisser votre fichier PDF ici
+subir.seleccionar=Sélectionner un fichier
+subir.tamaño=Taille maximale: 10 Mo
+subir.cancelar=Annuler
+subir.btnSubir=Télécharger la ressource
+
+# Resources
+recursos.titulo=Ressources de la matière
+recursos.explora=Explorez et téléchargez les matériaux disponibles
+recursos.buscar=Rechercher des ressources par titre ou description...
+recursos.sin=Aucune ressource disponible
+recursos.sinMensaje=Cette matière n'a pas encore de matériaux téléchargés
+recursos.sinResultados=Aucun résultat trouvé
+recursos.intentaOtros=Essayez d'autres termes de recherche
+recursos.descargar=Télécharger
+recursos.eliminar=Supprimer
+recursos.confirmar=Supprimer la ressource?
+recursos.noDeshacer=Cette action ne peut pas être annulée. Le fichier sera supprimé définitivement.
+
+# Users
+usuario.registro.exito=Utilisateur enregistré avec succès
+usuario.login.exito=Connexion réussie
+usuario.no.encontrado=Utilisateur non trouvé
+usuario.email.existe=E-mail déjà enregistré
+usuario.credenciales.invalidas=Identifiants invalides
+usuario.inactivo=Utilisateur inactif
+
+# Subjects
+materia.creada=Matière créée avec succès
+materia.actualizada=Matière mise à jour avec succès
+materia.eliminada=Matière supprimée avec succès
+materia.no.encontrada=Matière non trouvée
+materia.con.recursos=Impossible de supprimer une matière avec des ressources associées
+
+# Resources
+recurso.subido=Ressource téléchargée avec succès
+recurso.eliminado=Ressource supprimée avec succès
+recurso.restaurado=Ressource restaurée avec succès
+recurso.no.encontrado=Ressource non trouvée
+recurso.archivo.invalido=Le fichier doit être un PDF
+recurso.tamanio.excedido=Le fichier ne peut pas dépasser 10 Mo
+
+# Downloads
+descarga.registrada=Téléchargement enregistré avec succès
+
+# Statistics
+estadisticas.titulo=Statistiques du système
+estadisticas.usuarios=Utilisateurs
+estadisticas.recursos=Ressources
+estadisticas.descargas=Téléchargements
+
+# Reports
+reporte.generado=Rapport généré avec succès
+reporte.error=Erreur lors de la génération du rapport
+
+# Errors
+error.general=Une erreur est survenue
+error.acceso.denegado=Accès refusé
+error.no.encontrado=Ressource non trouvée
+error.interno=Erreur interne du serveur
+error.conexion=Erreur de connexion. Veuillez réessayer.
+error.cargarMaterias=Impossible de charger les matières
+
+# Roles
+rol.estudiante=Étudiant
+rol.docente=Enseignant
+rol.admin=Administrateur
+
+# States
+estado.cargando=Chargement...
+estado.guardando=Enregistrement...
+estado.eliminando=Suppression...
+estado.subiendo=Téléchargement...
+
+# Common Buttons
+btn.guardar=Enregistrer
+btn.cancelar=Annuler
+btn.eliminar=Supprimer
+btn.editar=Modifier
+btn.confirmar=Confirmer
+btn.cerrar=Fermer
+btn.buscar=Rechercher
+btn.reintentar=Réessayer
+
+# Footer
+footer.descripcion=Plateforme éducative gratuite dédiée à fournir des ressources de qualité
+footer.enlaces=Liens
+footer.materiasPopulares=Matières populaires
+footer.contacto=Contact
+footer.soporte=Support
+footer.terminos=Conditions
+footer.privacidad=Confidentialité
+footer.derechos=Tous droits réservés
